@@ -1,14 +1,16 @@
 package net.bnb1.kradle.features.jvm
 
-import net.bnb1.kradle.create
+import net.bnb1.kradle.createTask
 import net.bnb1.kradle.featureRegistry
 import net.bnb1.kradle.features.Blueprint
 import net.bnb1.kradle.propertiesRegistry
 import net.bnb1.kradle.sourceSets
 import org.gradle.api.GradleException
 import org.gradle.api.Project
+import org.gradle.api.plugins.JavaPluginExtension
 import org.gradle.api.tasks.JavaExec
 import org.gradle.api.tasks.SourceSet
+import org.gradle.jvm.toolchain.JavaToolchainService
 import org.gradle.kotlin.dsl.named
 
 class DevelopmentModeBlueprint(project: Project) : Blueprint(project) {
@@ -20,9 +22,15 @@ class DevelopmentModeBlueprint(project: Project) : Blueprint(project) {
     }
 
     override fun createTasks() {
+        val javaProperties = project.propertiesRegistry.get<JavaProperties>()
         val mainSourceSet = project.sourceSets.getByName(SourceSet.MAIN_SOURCE_SET_NAME)
         val agentResource = javaClass.getResource("/agent.jar")
-        project.create<JavaExec>(
+
+        val javaExtension = project.extensions.getByType(JavaPluginExtension::class.java)
+        val toolchainService = project.extensions.getByType(JavaToolchainService::class.java)
+        val launcher = toolchainService.launcherFor(javaExtension.toolchain)
+
+        project.createTask<JavaExec>(
             "dev",
             "Runs the application and stops it when sources change (use with -t)"
         ) {
@@ -37,8 +45,13 @@ class DevelopmentModeBlueprint(project: Project) : Blueprint(project) {
             environment("PROJECT_ROOT", project.rootDir)
             // Speed up start when developing
             jvmArgs = listOf("-XX:TieredStopAtLevel=1")
+            if (javaProperties.previewFeatures.get()) {
+                jvmArgs = jvmArgs + "--enable-preview"
+            }
             classpath = mainSourceSet.runtimeClasspath
-            jvmArgs = jvmArgs + listOf("-javaagent:${agentFile.absolutePath}")
+            jvmArgs = jvmArgs + "-javaagent:${agentFile.absolutePath}"
+
+            javaLauncher.set(launcher)
         }
     }
 
